# AlgoGym

./: .gitignore  README.md  TODO.txt  algogym-cli  pyproject.toml  requirements.txt
examples/: polynomial_kneighbors_demo.py  polynomial_learning_demo.py  test_functions.py  visualization_demo.py
frames/GradualLearningAlgorithm_PolynomialFunction_20250427-110228_polynomial_learning/: prediction_data.npz  validation_summary.txt
frames/GradualLearningAlgorithm_PolynomialFunction_20250427-110738_polynomial_learning/: prediction_data.npz  validation_summary.txt
frames/GradualLearningAlgorithm_PolynomialFunction_20250427-111739_polynomial_learning/: prediction_data.npz  validation_summary.txt
frames/GradualLearningAlgorithm_RosenbrockFunction_20250427-110235_rosenbrock_learning/: prediction_data.npz  validation_summary.txt
frames/GradualLearningAlgorithm_RosenbrockFunction_20250427-111747_rosenbrock_learning/: prediction_data.npz  validation_summary.txt
frames/GradualLearningAlgorithm_SinFunction_20250427-110232_sine_learning/: prediction_data.npz  validation_summary.txt
frames/GradualLearningAlgorithm_SinFunction_20250427-111743_sine_learning/: prediction_data.npz  validation_summary.txt
src/: create_example_animations.py  create_gradual_animations.py  test_animation.py
src/algogym/: __init__.py  cli.py
tests/algorithms/: test_evolutionary.py  test_neighbors.py  test_rl.py
tests/core/: test_engine.py
tests/data/: test_loaders.py
tests/evaluation/: test_metrics.py
tests/functions/: test_base.py  test_examples.py
tests/visualization/: __init__.py  (+1 more)
(+21 files in other folders)
