[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algogym"
version = "0.1.0"
description = "A framework for comparing function approximation algorithms."
readme = "README.md"
license = { text = "MIT License" } # Or choose another license
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"] 